<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/menu_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/menu" />

    <Button
        android:id="@+id/orders_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/new_order_button"
        android:gravity="center_horizontal"
        android:text="@string/order" />

    <Button
        android:id="@+id/customer_list_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/orders_button"
        android:gravity="center_horizontal"
        android:text="@string/customer_list" />

    <Button
        android:id="@+id/new_order_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/menu_button"
        android:gravity="center_horizontal"
        android:text="@string/new_order" />

    <TextView
        android:id="@+id/number_remaining_orders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/customer_list_button"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/on_main_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/number_remaining_orders"
        android:layout_alignBottom="@+id/number_remaining_orders"
        android:layout_centerHorizontal="true"
        android:text="@string/empty_order" />

</RelativeLayout>
